--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
         <div class="parent">
             <div class="bmain">
                 <h1>3D Printing</h1>
-                <img class="centerimage" src="" alt="Picutre full of 3D printed items, including the following: "/>
+                <img class="maxsize" src="images/3dpints.jpg" alt="Picutre full of 3D printed items, including the following: a viking, a frog with a crown, and a torphy with a Campus Fellowship logo."/>
                 <p>
                     
                 </p>
@@ -67,7 +67,15 @@
                 </p>
             </div>
             <div class="bmain">
+                <h1>Painting</h1>
+                <img class="maxsize" src="images/paintedfrog.jpg" alt="2 Painted frogs with acrylic paint behind them" />
+                <p>
 
+                </p>
+                <hr>
+                <p>
+
+                </p>
             </div>
         </div>
         <div id="watermark">
