--- a/learned.html
+++ b/learned.html
@@ -23,7 +23,7 @@
 <html lang="en">
 
     <head>
-    <title>Clubs</title>
+    <title>What I learned</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     </head>
@@ -57,33 +57,28 @@
         </div>
         <div class="parent">
             <div class="bmain">
-                <h1>3D Printing</h1>
-                <img class="maxsize" src="images/3dpints.jpg" alt="Picutre full of 3D printed items, including the following: a viking, a frog with a crown, and a torphy with a Campus Fellowship logo."/>
-                <p>
-                    
-                </p>
-                <hr>
-                <p>
-                    While 3D priting this semester, I was able to better appreciate my 3D printer and the things I can make from it. I was able to be get more comfortable with my 3D printer. 
-                </p>
+               <h1>From my Classes</h1>
+               <ul>
+                    <li>Shadowing</li>
+                    <li>Class work</li>
+                    <li></li>
+               </ul> 
             </div>
             <div class="bmain">
-                <h1>Painting</h1>
-                <img class="maxsize" src="images/paintedfrog.jpg" alt="2 Painted frogs with acrylic paint behind them" />
-                <p>
-
-                </p>
-                <hr>
-                <p>
-
-                </p>
-            </div>
-        </div>
-        <div id="title">
-            <h1>My Projects</h1>
-        </div>
-        <div id="watermark">
-            <p>Made By Matthew Roland</p>
+                <h1>From the Clubs</h1> 
+                <ul>
+                    <li>Myself</li>
+                    <li>Help with projects & homework</li>
+                    <li>Decrease in stress</li>
+               </ul> 
+             </div>
+             <div class="bmain">
+                <h1>From my Projects</h1> 
+                <ul>
+                    <li>Technology</li>
+                    <li>Problem solving & troubleshooting</li>
+               </ul> 
+             </div>
         </div>
     </body>
 </html>
