Hopefully this fixes the website

--- a/learned.html
+++ b/learned.html
@@ -61,14 +61,15 @@
                <ul>
                     <li>Shadowing</li>
                     <li>Class work</li>
+                    <li>Importance of making connections</li>
                </ul> 
             </div>
             <div class="bmain">
-                <h1>From the Clubs</h1> 
+                <h1>From Clubs</h1> 
                 <ul>
                     <li>Myself</li>
                     <li>Help with projects & homework</li>
-                    <li>Decrease in stress</li>
+                    <li>Friendships</li>
                </ul> 
              </div>
              <div class="bmain">
@@ -76,6 +77,7 @@
                 <ul>
                     <li>Technology</li>
                     <li>Problem solving & troubleshooting</li>
+                    <li>An escape from stresses</li>
                </ul> 
              </div>
         </div>
