--- a/projects.html
+++ b/projects.html
@@ -60,22 +60,14 @@
                 <h1>3D Printing</h1>
                 <img class="maxsize" src="images/3dpints.jpg" alt="Picutre full of 3D printed items, including the following: a viking, a frog with a crown, and a torphy with a Campus Fellowship logo."/>
                 <p>
-                    
-                </p>
-                <hr>
-                <p>
-                    While 3D priting this semester, I was able to better appreciate my 3D printer and the things I can make from it. I was able to be get more comfortable with my 3D printer. 
+                    I 3D printed stuff throughout the semester.
                 </p>
             </div>
             <div class="bmain">
                 <h1>Painting</h1>
                 <img class="maxsize" src="images/paintedfrog.jpg" alt="2 Painted frogs with acrylic paint behind them" />
                 <p>
-
-                </p>
-                <hr>
-                <p>
-
+                    I took the things that I 3D printed and I covered them with acryclic paint 
                 </p>
             </div>
         </div>
