--- a/projects.html
+++ b/projects.html
@@ -60,14 +60,21 @@
                 <h1>3D Printing</h1>
                 <img class="maxsize" src="images/3dpints.jpg" alt="Picutre full of 3D printed items, including the following: a viking, a frog with a crown, and a torphy with a Campus Fellowship logo."/>
                 <p>
-                    I 3D printed stuff throughout the semester.
+                    Creating objects with 3 dimensions in real life using Creality's Ender 3 v2.  
                 </p>
             </div>
             <div class="bmain">
                 <h1>Painting</h1>
                 <img class="maxsize" src="images/paintedfrog.jpg" alt="2 Painted frogs with acrylic paint behind them" />
                 <p>
-                    I took the things that I 3D printed and I covered them with acryclic paint 
+                    I took the things that I 3D printed and I covered them with acryclic paint.
+                </p>
+            </div>
+            <div class="bmain">
+                <h1>Emulation</h1>
+                <img class="maxsize" src="images/emulation.jpg" alt="Image of the load screen for Super Mario Bros Wii on the Dolphin Emulator." />
+                <p>
+                    Lets me get that feeling of nastalga again when I play old Wii games from my childhood.
                 </p>
             </div>
         </div>
